--- a/maps.html
+++ b/maps.html
@@ -18,31 +18,27 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization"></script>
     <script>
-        function plot(points, map, color) {
-            var path = new google.maps.Polyline({
-                path: points,
-                geodesic: true,
-                strokeColor: color,
-                strokeOpacity: 1.0,
-                strokeWeight: 2
-            });
-
-            path.setMap(map);
-        }
 
         function seg(map, x1, y1, x2, y2) {
             var points = [
                 new google.maps.LatLng(x1, y1),
                 new google.maps.LatLng(x2, y2)];
 
-            plot(points, map, 'black');
+            new google.maps.Polyline({
+                path: points,
+                geodesic: true,
+                strokeColor: 'black',
+                strokeOpacity: 0.5,
+                strokeWeight: 1,
+                map: map
+            });
         }
 
         function initialize() {
             var mapOptions = {
-                zoom: 20,
+                zoom: 16,
                 center: new google.maps.LatLng(51.56253,-0.24655),
-                mapTypeId: google.maps.MapTypeId.TERRAIN
+                mapTypeId: google.maps.MapTypeId.ROADMAP
             };
 
             var map = new google.maps.Map(document.getElementById('map-canvas'),
@@ -62,12 +58,25 @@
                         points.push(new google.maps.LatLng(x.getAttribute('lat'), x.getAttribute('lon')));
                     });
                     var seek = $('#seek');
+                    var circle = new google.maps.Circle({
+                        map: map,
+                        radius: 7,
+                        strokeWeight: 5,
+                        center: points[seek.val()]
+                    });
                     seek.attr('max', points.length);
-                    seek.on('change', function() {
-                        console.log(points[this.value]);
+                    seek.on('input', function() {
+                        circle.set('center', points[this.value]);
                     });
 
-                    plot(points, map, 'blue');
+                    new google.maps.Polyline({
+                        path: points,
+                        geodesic: true,
+                        strokeColor: 'blue',
+                        strokeOpacity: 1.0,
+                        strokeWeight: 2,
+                        map: map
+                    });
                     var heat = new google.maps.visualization.HeatmapLayer({data: new google.maps.MVCArray(points)});
                     heat.set('radius', 0.0003); // "pixels at zoom level 0" go screw yourself.  ~= 10 meters?
                     heat.set('opacity', 0.2);
